--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ InsuranceSystem/src/main/webapp/WEB-INF/spring/root-context.xml
 InsuranceSystem/target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
 InsuranceSystem/target/m2e-wtp/web-resources/META-INF/maven/com.team/InsuranceSystem/pom.properties
 InsuranceSystem/target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
+*.MF
+InsuranceSystem/src/main/webapp/WEB-INF/spring/root-context.xml
+InsuranceSystem/target/m2e-wtp/web-resources/META-INF/maven/com.team/InsuranceSystem/pom.properties
