Customer and Insurance Policy - Search, Validation, and button updates
Added Search to Customer and Insurance Policy
Added Validation to Customer and Insurance Policy
Updated buttons and added hover text

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ InsuranceSystem/target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
 InsuranceSystem/src/main/webapp/WEB-INF/spring/root-context.xml
 InsuranceSystem/target/m2e-wtp/web-resources/META-INF/maven/com.team/InsuranceSystem/pom.properties
 InsuranceSystem/target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
+InsuranceSystem/src/main/webapp/WEB-INF/spring/root-context.xml
+InsuranceSystem/target/m2e-wtp/web-resources/META-INF/maven/com.team/InsuranceSystem/pom.properties
+InsuranceSystem/target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
