--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@ InsuranceSystem/src/main/webapp/WEB-INF/spring/root-context.xml
 InsuranceSystem/target/m2e-wtp/web-resources/META-INF/maven/com.team/InsuranceSystem/pom.properties
 InsuranceSystem/target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
 InsuranceSystem/target/m2e-wtp/web-resources/META-INF/maven/com.team/InsuranceSystem/pom.properties
+InsuranceSystem/src/main/webapp/WEB-INF/spring/root-context.xml
+InsuranceSystem/target/m2e-wtp/web-resources/META-INF/MANIFEST.MF
+InsuranceSystem/target/m2e-wtp/web-resources/META-INF/maven/com.team/InsuranceSystem/pom.properties
+InsuranceSystem/target/m2e-wtp/web-resources/META-INF/maven/com.team/InsuranceSystem/pom.properties
